--- a/cleanHUD/Info.plist
+++ b/cleanHUD/Info.plist
@@ -15,11 +15,13 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.2.5</string>
+	<string>0.2.9</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.2.5</string>
+	<string>0.2.9</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Wolfgang Baird. All rights reserved.</string>
+	<string>Copyright © 2016 Wolfgang. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 	<key>SIMBLTargetApplications</key>
