--- a/cleanHUD/Info.plist
+++ b/cleanHUD/Info.plist
@@ -15,17 +15,25 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.3.4</string>
+	<string>0.4.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.3.4</string>
+	<string>0.4.1</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 Wolfgang. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 	<key>SIMBLTargetApplications</key>
 	<array>
+		<dict>
+			<key>BundleIdentifier</key>
+			<string>com.apple.controlstrip</string>
+		</dict>
+		<dict>
+			<key>BundleIdentifier</key>
+			<string>com.apple.OSDUIHelper</string>
+		</dict>
 		<dict>
 			<key>BundleIdentifier</key>
 			<string>com.apple.loginwindow</string>
