--- a/cleanHUD/Info.plist
+++ b/cleanHUD/Info.plist
@@ -15,24 +15,28 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.6.2</string>
+	<string>0.7.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.6.2</string>
+	<string>0.7.2</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Wolfgang. All rights reserved.</string>
+	<string>Copyright © 2019 macEnhance. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 	<key>SIMBLTargetApplications</key>
 	<array>
 		<dict>
 			<key>BundleIdentifier</key>
+			<string>com.apple.OSDUIHelper</string>
+		</dict>
+		<dict>
+			<key>BundleIdentifier</key>
 			<string>com.apple.controlstrip</string>
 		</dict>
 		<dict>
 			<key>BundleIdentifier</key>
-			<string>com.apple.OSDUIHelper</string>
+			<string>com.apple.systemuiserver</string>
 		</dict>
 	</array>
 </dict>
