--- a/cleanHUD/Info.plist
+++ b/cleanHUD/Info.plist
@@ -15,11 +15,11 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.7.2</string>
+	<string>0.7.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.7.2</string>
+	<string>0.7.3</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 macEnhance. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
@@ -36,7 +36,7 @@
 		</dict>
 		<dict>
 			<key>BundleIdentifier</key>
-			<string>com.apple.systemuiserver</string>
+			<string>com.apple.notificationcenterui</string>
 		</dict>
 	</array>
 </dict>
