--- a/cleanHUD/Info.plist
+++ b/cleanHUD/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>418</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 macEnhance. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
